--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,7 +7,7 @@
         * SITE_NAME：站点名称
         */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: "",
+            SCF_GATEWAY: "https://lingering-river-04a8.hfer.workers.dev",
             SITE_NAME: "FODI",
             IS_CF: true
         };
